--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header>
+      <nav>
+        <a>
+          <img src="logo/140x72" alt="Логотип Седона">
+        </a>
+        <ul>
+          <li><a href="">Информация</a></li>
+          <li><a href="">Фото и видео</a></li>
+          <li><a href="">Карта штата</a></li>
+          <li><a href="">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
 
   </body>
 </html>
