--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
       </nav>
     </header>
 
+    <main>
+      <h1>Городок Седона</h1>
+
+      <section>
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+
+      <section>
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки,<br>
+          и мы покажем вам лучшие предложения гостиниц в седоне
+        </p>
+      </section>
+    </main>
+
   </body>
 </html>
