--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>HTML Academy: Седона - катлог гостиниц</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>HTML Academy: Седона - катлог гостиниц</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="/">
+          <img src="logo/140x72" alt="Логотип Седона">
+        </a>
+        <ul>
+          <li><a href="">Информация</a></li>
+          <li><a href="">Фото и видео</a></li>
+          <li><a href="">Карта штата</a></li>
+          <li><a>Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    
+  </body>
 </html>
