--- a/catalog.html
+++ b/catalog.html
@@ -18,6 +18,21 @@
         </ul>
       </nav>
     </header>
-    
+
+    <footer>
+      <p>#visitSEDONA</p>
+
+      <div>
+        <ul>
+          <li><a href="">Твитер</a></li>
+          <li><a href="">Фэйсбук</a></li>
+          <li><a href="">Ютуб</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <p>Website by <a><img src="HTMLAcademy_logo/115x41" alt="Логотип HTML academy"></a></p>
+      </div>
+    </footer>
   </body>
 </html>
