--- a/catalog.html
+++ b/catalog.html
@@ -19,6 +19,56 @@
       </nav>
     </header>
 
+    <main>
+      <h1>Гостиницы городка Седона</h1>
+
+      <section>
+        <h2>Сортированный список гостиниц</h2>
+
+        <ul>
+          <li>
+            <h3>Amara Resort & Spa</h3>
+            <p><img src="foto/135x90" alt="Фото гостиницы"></p>
+            <p><span>Гостиница</span> <span>от 4000 Р.</span></p>
+            <p>
+              <a href="">Подробнее</a>
+              <a href="">Забронировать</a>
+            </p>
+            <div>
+              <span></span>
+              <p>Рейтинг: 8,5</p>
+            </div>
+          </li>
+          <li>
+            <h3>Desert Quail Inn</h3>
+            <p><img src="foto/135x90" alt="Фото гостиницы"></p>
+            <p><span>Мотель</span> <span>от 3000 Р.</span></p>
+            <p>
+              <a href="">Подробнее</a>
+              <a href="">Забронировать</a>
+            </p>
+            <div>
+              <span></span>
+              <p>Рейтинг: 8,9</p>
+            </div>
+          </li>
+          <li>
+            <h3>Villas at Poco Diablo</h3>
+            <p><img src="foto/135x90" alt="Фото гостиницы"></p>
+            <p><span>Апартаменты</span> <span>от 2000 Р.</span></p>
+            <p>
+              <a href="">Подробнее</a>
+              <a href="">Забронировать</a>
+            </p>
+            <div>
+              <span></span>
+              <p>Рейтинг: 9,2</p>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <footer>
       <p>#visitSEDONA</p>
 
