--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <body>
     <header>
       <nav>
-        <a>
+        <a href="/">
           <img src="logo/140x72" alt="Логотип Седона">
         </a>
         <ul>
           <li><a href="">Информация</a></li>
           <li><a href="">Фото и видео</a></li>
           <li><a href="">Карта штата</a></li>
-          <li><a href="">Гостиницы</a></li>
+          <li><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
