--- a/catalog.html
+++ b/catalog.html
@@ -23,6 +23,11 @@
       <h1>Гостиницы городка Седона</h1>
 
       <section>
+        <h2>Подбор гостиниц по критериям</h2>
+        <!-- здесь будет форма фильтров выбора гостиниц-->
+      </section>
+
+      <section>
         <h2>Сортированный список гостиниц</h2>
 
         <ul>
