секция фильтра - добавил разметку

--- a/catalog.html
+++ b/catalog.html
@@ -25,6 +25,17 @@
       <section>
         <h2>Подбор гостиниц по критериям</h2>
         <!-- здесь будет форма фильтров выбора гостиниц-->
+
+        <div>
+          <span>найдено: 3</span>
+          <p>Сортировка:</p>
+          <ul>
+            <li>по цене</li>
+            <li>по типу</li>
+            <li>по рейтингу</li>
+          </ul>
+          <span></span>
+        </div>
       </section>
 
       <section>
