добавил в разметку место под форму

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в седоне
         </p>
+
+        <!-- здесь будет форма для поиска гостиницы -->
+        <button type="button">Посик гостиницы в Седоне</button>
+
+        <img src="map/1200x594" alt="Карта Седоны">
       </section>
     </main>
 
