--- a/catalog.html
+++ b/catalog.html
@@ -23,8 +23,32 @@
       <h1>Гостиницы городка Седона</h1>
 
       <section>
-        <h2>Подбор гостиниц по критериям</h2>
         <!-- здесь будет форма фильтров выбора гостиниц-->
+        <h2>Подбор гостиниц по критериям</h2>
+
+        <div>
+          <h3>Инфраструктура:</h3>
+          <ul>
+            <li>Бассейн</li>
+            <li>Парковка</li>
+            <li>Wi-Fi</li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Тип жилья:</h3>
+          <ul>
+            <li>Гостиница</li>
+            <li>Мотель</li>
+            <li>Апартаменты</li>
+          </ul>
+        </div>
+
+        <div>
+          <h3>Стоимость в сутки(Р):</h3>
+          <span></span>
+          <button type="button">показать</button>
+        </div>
 
         <div>
           <span>найдено: 3</span>
