--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        <a href="/">
+        <a href="index.html">
           <img src="logo/140x72" alt="Логотип Седона">
         </a>
         <ul>
@@ -26,10 +26,10 @@
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
 
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-        <ul>
+        <ol>
           <li>
             <h3>Настоящий городок</h3>
-            <span>- №1 -</span>
+            <span>№1</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             <img src="foto_city/800x256" alt="Фотография городка">
 
@@ -51,33 +51,31 @@
 
           <li>
             <h3>Там есть мост дьявола</h3>
-            <span>- №2 -</span>
+            <span>№2</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
             <img src="foto_devilsBridge/800x256" alt="Фотография моста дьявола">
           </li>
           <li>
             <h3>Небольшая площадь</h3>
-            <span>- №3 -</span>
+            <span>№3</span>
             <p>Все достопримечательности находяться очень близко</p>
           </li>
           <li>
             <h3>Красивая дорога</h3>
-            <span>- №4 -</span>
+            <span>№4</span>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li>
             <h3>Мало туристов</h3>
-            <span>- №5 -</span>
+            <span>№5</span>
             <p>Большинство едет в Гранд Каньон и толпиться там</p>
           </li>
-        </ul>
+        </ol>
       </section>
 
       <section>
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,<br>
-          и мы покажем вам лучшие предложения гостиниц в седоне
-        </p>
+        <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <!-- здесь будет форма для поиска гостиницы -->
         <button type="button">Посик гостиницы в Седоне</button>
@@ -89,17 +87,14 @@
     <footer>
       <p>#visitSEDONA</p>
 
-      <div>
-        <ul>
-          <li><a href="">Твитер</a></li>
-          <li><a href="">Фэйсбук</a></li>
-          <li><a href="">Ютуб</a></li>
-        </ul>
-      </div>
+      <ul>
+        <li><a href="">Твитер</a></li>
+        <li><a href="">Фэйсбук</a></li>
+        <li><a href="">Ютуб</a></li>
+      </ul>
 
-      <div>
-        <p>Website by <a><img src="HTMLAcademy_logo/115x41" alt="Логотип HTML academy"></a></p>
-      </div>
+      <!-- отображение логотипа академии заменить на декортативное -->
+      <p>Website by <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="HTMLAcademy_logo/115x41" alt="Логотип HTML academy"></a></p>
     </footer>
   </body>
 </html>
