в catalog.html добавил графику

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a href="index.html">
-          <img src="logo/140x72" alt="Логотип Седона">
+          <img src="logo/140x72" alt="Логотип Седона"> <!-- логотип Седона img/svg/logo-sedona.svg -->
         </a>
         <ul>
           <li><a href="">Информация</a></li>
@@ -24,6 +24,7 @@
 
       <section>
         <!-- здесь будет форма фильтров выбора гостиниц-->
+        <!-- фоновое изображение img/catalog-bg -->
         <h2>Подбор гостиниц по критериям</h2>
 
         <div>
@@ -46,7 +47,7 @@
 
         <div>
           <h3>Стоимость в сутки(Р):</h3>
-          <span></span>
+          <span></span> <!-- изображение ползунка img/svg/filter-button.svg -->
           <button type="submit">показать</button>
         </div>
 
@@ -59,8 +60,8 @@
             <li><a href="">по рейтингу</a></li>
           </ul>
           <span>
-            <a href=""></a><!-- стрелочка вверх -->
-            <a></a><!-- стрелочка вниз -->
+            <a></a> <!-- стрелочка вверх img/svg/icon-up-dir.svg -->
+            <a href=""></a> <!-- стрелочка вниз img/svg/icon-down-dir.svg -->
           </span>
         </div>
       </section>
@@ -70,8 +71,8 @@
 
         <ol>
           <li>
-            <h3><a href=""> Resort & Spa</a></h3>
-            <img src="foto/135x90" alt="Фото гостиницы">
+            <h3><a href="">Amara Resort & Spa</a></h3>
+            <img src="img/hotel-1.jpg" width="135" height="90" alt="Фото гостиницы Amara Resort & Spa">
             <p>
               <span>Гостиница</span>
               <span>от 4000 Р.</span>
@@ -81,13 +82,13 @@
               <a href="">Забронировать</a>
             </p>
             <div>
-              <span></span>
+              <span></span> <!-- звёздочки рейтинга img/svg/star.svg -->
               <p>Рейтинг: 8,5</p>
             </div>
           </li>
           <li>
             <h3><a href="">Desert Quail Inn</a></h3>
-            <img src="foto/135x90" alt="Фото гостиницы">
+            <img src="img/hotel-2.jpg" width="135" height="90" alt="Фото мотеля Desert Quail Inn">
             <p>
               <span>Мотель</span>
               <span>от 3000 Р.</span>
@@ -97,13 +98,13 @@
               <a href="">Забронировать</a>
             </p>
             <div>
-              <span></span>
+              <span></span> <!-- звёздочки рейтинга img/svg/star.svg -->
               <p>Рейтинг: 8,9</p>
             </div>
           </li>
           <li>
             <h3><a href="">Villas at Poco Diablo</a></h3>
-            <img src="foto/135x90" alt="Фото гостиницы">
+            <img src="img/hotel-3.jpg" width="135" height="90" alt="Фото апартаментов Villas at Poco Diablo">
             <p>
               <span>Апартаменты</span>
               <span>от 2000 Р.</span>
@@ -113,7 +114,7 @@
               <a href="">Забронировать</a>
             </p>
             <div>
-              <span></span>
+              <span></span> <!-- звёздочки рейтинга img/svg/star.svg -->
               <p>Рейтинг: 9,2</p>
             </div>
           </li>
@@ -125,12 +126,12 @@
       <p>#visitSEDONA</p>
 
       <ul>
-        <li><a href="">Твитер</a></li>
-        <li><a href="">Фэйсбук</a></li>
-        <li><a href="">Ютуб</a></li>
+        <li><a href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
+        <li><a href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
+        <li><a href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
       </ul>
 
-      <!-- отображение логотипа академии заменить на декортативное -->
+      <!-- логотип академии img/svg/logo-htmlacademy.svg -->
       <p>Website by <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="HTMLAcademy_logo/115x41" alt="Логотип HTML academy"></a></p>
     </footer>
   </body>
