в index.html добавил графику

--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
 
       <section>
         <!-- здесь будет форма фильтров выбора гостиниц-->
-        <!-- фоновое изображение img/catalog-bg -->
+        <!-- фоновое изображение img/catalog-bg.jpg -->
         <h2>Подбор гостиниц по критериям</h2>
 
         <div>
