--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a href="index.html">
-          <img src="logo/140x72" alt="Логотип Седона">
+          <img src="logo/140x72" alt="Логотип Седона"> <!-- логотип Седона img/svg/logo-sedona.svg -->
         </a>
         <ul>
           <li><a href="">Информация</a></li>
@@ -21,6 +21,9 @@
 
     <main>
       <h1>Городок Седона</h1>
+      <!-- фоновое изображение  img/index-bg.jpg -->
+      <!-- маска для фона img/svg/intro-mask.svg -->
+      <!-- приветствие на фоне img/svg/intro-welcome.svg -->
 
       <section>
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -31,19 +34,19 @@
             <h3>Настоящий городок</h3>
             <span>№1</span>
             <p>Седона - не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="foto_city/800x256" alt="Фотография городка">
+            <img src="img/feature-1.jpg" width="800" height="256" alt="Фотография городка Седона">
 
             <ul>
               <li>
-                <h4>Жильё</h4>
+                <h4>Жильё</h4> <!-- иконка домика img/svg/icon-1.svg -->
                 <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
               <li>
-                <h4>Еда</h4>
+                <h4>Еда</h4> <!-- иконка еды img/svg/icon-3.svg -->
                 <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </li>
               <li>
-                <h4>Сувениры</h4>
+                <h4>Сувениры</h4> <!-- иконка сувениров img/svg/icon-2.svg -->
                 <p>Не только китайского, но и местного производства!</p>
               </li>
             </ul>
@@ -53,7 +56,7 @@
             <h3>Там есть мост дьявола</h3>
             <span>№2</span>
             <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-            <img src="foto_devilsBridge/800x256" alt="Фотография моста дьявола">
+            <img src="img/feature-2.jpg" width="800" height="256" alt="Фотография моста дьявола">
           </li>
           <li>
             <h3>Небольшая площадь</h3>
@@ -78,9 +81,10 @@
         <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в Седоне</p>
 
         <!-- здесь будет форма для поиска гостиницы -->
+        <!-- в форме используется изображение календаря img/svg/calendar.svg -->
         <button type="button">Посик гостиницы в Седоне</button>
 
-        <img src="map/1200x594" alt="Карта Седоны">
+        <img src="img/map.png" width="1200" height="594" alt="Карта как проехать к городку Седона">
       </section>
     </main>
 
@@ -88,12 +92,12 @@
       <p>#visitSEDONA</p>
 
       <ul>
-        <li><a href="">Твитер</a></li>
-        <li><a href="">Фэйсбук</a></li>
-        <li><a href="">Ютуб</a></li>
+        <li><a href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
+        <li><a href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
+        <li><a href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
       </ul>
 
-      <!-- отображение логотипа академии заменить на декортативное -->
+      <!-- логотип академии img/svg/logo-htmlacademy.svg -->
       <p>Website by <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="HTMLAcademy_logo/115x41" alt="Логотип HTML academy"></a></p>
     </footer>
   </body>
